# mlops

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
mlops/: __init__.py
